--- a/views/404.html
+++ b/views/404.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Sorry!</h1>
     <p>Error: 404 Not Found</p>
-    <img src="images/flowdaylogo.png" alt="404"/>
+    <img src="/images/flowdaylogo.png" alt="404"/>
 </body>
 </html>
