--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Hello from Flowday App</h1>
-    <img src="images/flowday.png" alt="flowday App" />
+    <img src="/images/flowday.png" alt="flowday App" />
 </body>
 </html>
