--- a/email/waitlist.handlebars
+++ b/email/waitlist.handlebars
@@ -443,9 +443,9 @@
               <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                 <tr>
                   <td class="email-masthead">
-                    <a href="https://seemetracker.com" class="f-fallback email-masthead_name">
+                    <a href="https://flowday.net" class="f-fallback email-masthead_name">
                   </a>
-                  <img src="https://res.cloudinary.com/dkcazf954/image/upload/v1675777082/seemelogo_hzck1j.png" width="250px" alt="seemetracker" />
+                  <img src="/images/flowdaylogo.png" width="250px" alt="flowday" />
                   </td>
                 </tr>
                 <!-- Email Body -->
@@ -457,7 +457,7 @@
                         <td class="content-cell">
                           <div class="f-fallback">
                             <h1>Be the First to Know!</h1>
-                            <p>Thank you for joining the seemetracker waitlist. My name is Ajibona Toyin Mathew, CEO SeemeTracker App, We’re thrilled to have you on board. We are allowing you to track your family and loved ones all from the click of a buttoon, To get the most out of seemetracker, we've put together some actions to get you started right away:</p>
+                            <p>Thank you for joining the flowday waitlist. My name is Micheal Amanso, CEO Flowday App, We’re thrilled to have you on board. We are allowing you to transact easily with stable coin, To get the most out of flowday, we've put together some actions to get you started right away:</p>
                             <!-- Action -->
                             <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                               <tr>
@@ -465,17 +465,17 @@
                                   <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                     <tr>
                                       <td align="center">
-                                        <a style="color:#fff" href="https://twitter.com/seemetrackerApp" class="f-fallback button button--blue" target="_blank" clicktracking="off">Join Our Community</a>
+                                        <a style="color:#fff" href="https://twitter.com/FlowdayApp" class="f-fallback button button--blue" target="_blank" clicktracking="off">Join Our Community</a>
                                       </td>
                                     </tr>
                                   </table>
                                 </td>
                               </tr>
                             </table>
-                            <p>Be the First to know when we launch, keep rooting for us we will make you proud. You can keep a tab on us by joining our Community. Check out <a href="https://medium.com/seemetracker/seemetracker-solutions"> this article</a> to know about what we are building</p>
+                            <p>Be the First to know when we launch, keep rooting for us we will make you proud. You can keep a tab on us by joining our Community. Check out <a href="https://medium.com/flowday/flowday-solutions"> this article</a> to know about what we are building</p>
 <br>
-<p>If you have any questions, feel free to <a href="mailto:admin@seemetracker.com">contact our customer success team</a> anytime. (We're lightning quick at replying.) We also offer <a href="https://seemetracker.com#live-chat">live chat</a> during business hours.</p>
-                            <p><strong>P.S.</strong> Need immediate help getting started? Check out our <a href="https://seemetracker.com/help">help documentation</a>. Or, just reply to this email, the seemetracker support team is always ready to help!</p>
+<p>If you have any questions, feel free to <a href="mailto:contact@flowday.net">contact our customer success team</a> anytime. (We're lightning quick at replying.) We also offer <a href="https://flowday.com#live-chat">live chat</a> during business hours.</p>
+                            <p><strong>P.S.</strong> Need immediate help getting started? Check out our <a href="https://flowday.net/help">help documentation</a>. Or, just reply to this email, the flowday support team is always ready to help!</p>
                             <!-- Sub copy -->
                             <table class="body-sub" role="presentation">
                               <tr>
@@ -494,8 +494,8 @@
                   <table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
                   <tr>
                     <td class="content-cell" align="center">
-                      <p class="f-fallback sub align-center">&copy; 2023 seemetracker.com. All rights reserved.
-                        <br>Lagos state, Nigeria.
+                      <p class="f-fallback sub align-center">&copy; 2023 flowday.com. All rights reserved.
+                        <br>Abuja FCT, Nigeria.
                       </p>
                     </td>
                   </tr>
